# design_project

./: .gitignore  CMakeLists.txt  README(Kyle).md  README.md  sonar-project.properties
.scannerwork/: report-task.txt
arduino_code/: keyboard_firmware  keyboard_firmware.ino
brainstorming/: Display_templates.txt  detail_scratchbook.txt  pseudo_code.txt
display_lib/Fonts/: CMakeLists.txt
display_lib/GUI/: CMakeLists.txt
display_lib/LCD/: CMakeLists.txt
examples/Display/: LCD_2in_test.c  LCD_Test.h
include/: buzzer_tones.h  core_one.h  definitions.h  display_functions.h  display_manager.h  enums.h  main.h  text_properties.h
lib/: CMakeLists.txt
lib/Config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
lib/Fonts/: CMakeLists.txt
lib/GUI/: CMakeLists.txt  GUI_Paint.c  GUI_Paint.h
lib/LCD/: CMakeLists.txt  LCD_2in.h
src/: CMakeLists.txt  core_one.c  display_manager.c  display_manager.h  game_loop.c  main.c
src/keyboard_library/: CMakeLists.txt  keyboard.c  keyboard.h  keyboard.pio
src/tone_generation/: melodies.h  pitches.h  pwm-tone.c  pwm-tone.h
